some styling fixes, trying to solve the issue with selecting next/prev month when the week numbers are visible and not break basic behaviour

--- a/packages/components/calendar/src/select-day.scss
+++ b/packages/components/calendar/src/select-day.scss
@@ -27,9 +27,9 @@
   // font-size: 1.2em;
   font-weight: var(--sl-text-new-typeset-fontWeight-semiBold);
 
-  sl-icon {
-    color: var(--sl-color-foreground-subtlest);
-  }
+  // sl-icon {
+  //  color: var(--sl-color-foreground-subtlest);
+  // }
 }
 
 .current-year {
